Fix android (Thanks Google!)