@@ -74,8 +74,9 @@ public class SyncConfigHandler implements HttpHandler {
     }
 
     private synchronized void saveConfigToFile(SyncConfig config) {
+        byte[] bytes = org.peergos.util.JSONParser.toString(config.toJson()).getBytes(StandardCharsets.UTF_8);
         try {
-            Files.writeString(peergosDir.resolve(SYNC_CONFIG_FILENAME), org.peergos.util.JSONParser.toString(config.toJson()));
+            Files.write(peergosDir.resolve(SYNC_CONFIG_FILENAME), bytes);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
